--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,13 +50,14 @@
     "input-otp": "1.4.1",
     "install": "^0.13.0",
     "jspdf": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "npm": "^11.6.0",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
