--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,6 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 altair==5.5.0
-annotated-types==0.7.0
 anyio==4.10.0
 asgiref==3.8.1
 attrs==24.3.0
@@ -17,7 +16,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 Django==5.1.4
 django-distill==3.2.7
-dnspython==2.8.0
+dnspython==2.2.1  # downgraded to a stable version for 3.11
 filelock==3.19.1
 filetype==1.2.0
 Flask==3.1.2
@@ -46,12 +45,10 @@ hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
-jiter==0.10.0
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
 langchain==0.3.27
 langchain-community==0.3.29
 langchain-core==0.3.76
@@ -67,84 +64,35 @@ langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.6
 langsmith==0.4.27
 llvmlite==0.44.0
-markdown-it-py==3.0.0
+Markdown==3.5.3
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-mdurl==0.1.2
 more-itertools==10.8.0
-mpmath==1.3.0
-msgspec==0.19.0
 multidict==6.6.4
-mypy_extensions==1.1.0
-narwhals==1.19.1
-networkx==3.5
-numba==0.61.2
-numpy==2.2.1
+numpy==1.26.0   # compatible with 3.11
 openai==1.107.2
 openai-whisper==20250625
 orjson==3.11.3
-ormsgpack==1.10.0
-packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
-portalocker==3.2.0
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==6.32.0
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-PyJWT==2.10.1
 pymongo==4.15.0
-pypdf==6.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-pytube==15.0.0
-pytz==2024.2
 PyYAML==6.0.2
 qdrant-client==1.15.1
-referencing==0.35.1
 regex==2025.9.1
 requests==2.32.5
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9.1
-safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
 sentence-transformers==5.1.0
-setuptools==80.9.0
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
 SQLAlchemy==2.0.43
 sqlparse==0.5.3
 streamlit==1.41.1
-sympy==1.14.0
-tenacity==9.0.0
-threadpoolctl==3.6.0
-tiktoken==0.11.0
-tokenizers==0.22.0
-toml==0.10.2
 torch==2.8.0
-tornado==6.4.2
 tqdm==4.67.1
 transformers==4.56.1
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.12.2
-tzdata==2024.2
+typing-extensions==4.12.2
 urllib3==2.3.0
-uv==0.7.2
-watchdog==6.0.0
 Werkzeug==3.1.3
-xxhash==3.5.0
 yarl==1.20.1
 zstandard==0.24.0
