--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,98 +1,43 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-altair==5.5.0
-anyio==4.10.0
-asgiref==3.8.1
-attrs==24.3.0
-blinker==1.9.0
-cachelib==0.13.0
-cachetools==5.5.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-dataclasses-json==0.6.7
-distro==1.9.0
-Django==5.1.4
-django-distill==3.2.7
-dnspython==2.2.1
-filelock==3.19.1
-filetype==1.2.0
+# Core Flask & extensions
 Flask==3.1.2
 flask-cors==6.0.1
 Flask-JWT-Extended==4.7.1
 Flask-Session==0.8.0
-frozenlist==1.7.0
-fsspec==2025.9.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.18
-google-api-core==2.25.1
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.4
-grpcio==1.74.0
-grpcio-status==1.74.0
-h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-httpcore==1.0.9
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.4
-hyperframe==6.1.0
-idna==3.10
 itsdangerous==2.2.0
+Werkzeug==3.1.3
 Jinja2==3.1.5
-joblib==1.5.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
+
+# MongoDB
+pymongo==4.15.0
+
+# Qdrant
+qdrant-client==1.15.1
+
+# AI / LangChain / OpenAI
+openai==1.107.2
+openai-whisper==20250625
 langchain==0.3.27
-langchain-community==0.3.29
 langchain-core==0.3.76
-langchain-deepseek==0.1.4
+langchain-community==0.3.29
 langchain-google-genai==2.1.10
 langchain-huggingface==0.3.1
 langchain-openai==0.3.33
 langchain-qdrant==0.2.0
 langchain-text-splitters==0.3.11
 langgraph==0.6.7
-langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.6
 langsmith==0.4.27
-llvmlite==0.44.0
-Markdown==3.9.1
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-more-itertools==10.8.0
-multidict==6.6.4
-numpy==1.26.0
-openai==1.107.2
-openai-whisper==20250625
-orjson==3.11.3
-pandas==2.2.3
-pillow==11.0.0
-pymongo==4.15.0
-python-dateutil==2.9.0.post0
+
+# Utilities
 python-dotenv==1.1.1
-PyYAML==6.0.2
-qdrant-client==1.15.1
-regex==2025.9.1
 requests==2.32.5
-scikit-learn==1.7.2
-scipy==1.16.2
-sentence-transformers==5.1.0
-SQLAlchemy==2.0.43
-sqlparse==0.5.3
-streamlit==1.41.1
-torch==2.8.0
-tqdm==4.67.1
-transformers==4.56.1
-typing-extensions==4.12.2
-urllib3==2.3.0
-Werkzeug==3.1.3
-yarl==1.20.1
-zstandard==0.24.0
+dnspython==2.2.1
+regex==2025.9.1
+Markdown==3.9.1
+numpy==1.26.0
+pandas==2.2.3
+PyYAML==6.0.2
+
+# Optional: PDF / files
+pypdf==6.0.0
