--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,7 @@ qdrant-client==1.15.1
 
 # AI / LangChain / OpenAI
 openai==1.107.2
-openai-whisper==20250625
+# openai-whisper==20250625
 langchain==0.3.27
 langchain-core==0.3.76
 langchain-community==0.3.29
@@ -33,7 +33,6 @@ langsmith==0.4.27
 python-dotenv==1.1.1
 requests==2.32.5
 regex==2025.9.1
-numpy==1.26.0
 pandas==2.2.3
 PyYAML==6.0.2
 
